# Track-user-activity

./: CMakeLists.txt  README.md  external_sort.cpp  generate.cpp  map.cpp  mapreduce.cpp  partition_map.cpp  reduce1.cpp  reduce2.cpp
test/: input.txt  output.txt
